[build-system]
build-backend = "maturin"
requires = ["maturin>=0.12,<0.13"]

[project]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
license = {file = "LICENSE.txt"}
name = "ltd_rust"
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/prokie/ltd-rust"

[project.optional-dependencies]
development = [
  "pytest",
  "tox",
]
